Review and update remaining configuration files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+// Reviewed and updated for current hackathon usage
 {
   "files": [],
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
